Fill out content for missions recipe page

--- a/recipes/missions.html
+++ b/recipes/missions.html
@@ -1,12 +1,68 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Straight Line Missions</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Straight Line Missions</h1>
-    <img src="../images/tom-davies-1.jpeg" alt="Tom Davies ">
-</body>
+    <img
+      src="../images/tom-davies-1.jpeg"
+      alt="A close up of Geowizard's face walks through the cold and wet Welsh 
+      mountains on one of his straight line missions"/>
+    <p>
+        <h3>Description</h3>
+        A riveting challenge where Geowizard attempts to cross a (relatively 
+        small) country in a completely straight line. He measures his success 
+        with his completely made up and pointless grading system.
+    </p>
+    <p>
+        <h3>Ingredients</h3>
+        <ul>
+            <li>An incredibly detailed line which includes mountains, rivers
+                and lots of potentially angry farmers.
+            </li>
+            <li>Distinct lack of vital equipment such as gloves and a satellite
+                phone.
+            </li>
+            <li>An incredibly loyal girlfriend (soon to be wife) that will drive
+                around the middle of nowhere to keep you stocked up with supplies.
+            </li>
+        </ul>
+    </p>
+    <p>
+        <h3>Steps</h3>
+        <ol>
+            <li>Set off optimistically, rambling away to any poor elderly couple
+                you pass about your straight line mission while they try to have
+                a nice, quiet countryside walk.
+            </li>
+            <li>Update your viewers of your constant fear of the local farmers,
+                as they could kick you off their land (or worse) bringing an end
+                to the mission.
+            </li>
+            <li>Proclaim that you have reached a low point of the mission, as
+                your body and mind become tired due to exhaustion.
+            </li>
+            <li>Make a overly risky maneuvre that could result in death, as perfectly
+                demonstrated by Geowizard below, where he tries to wade through
+                a Norweigan peat bog.
+            </li>
+            <li>Either give up or finally reach your destination, which is a rather
+                underwhelming inland estuary and not an extensive beach as one would
+                imagine a coast to be.
+            </li>
+            <li>Make a 30+ minute video explaining how close you followed the line
+                and give it a ranking on the completely made up and pointless 
+                ranking system.
+            </li>
+        </ol>
+        <img src="../images/tom-davies-2.png" alt="Tom Davies wading through a
+        Norweigan peat bog in his mission across Norway">
+    </p>
+    <p>
+        <a href="../index.html">Back to Homepage</a>
+    </p>
+  </body>
 </html>
