Make all links on index page

--- a/index.html
+++ b/index.html
@@ -7,9 +7,19 @@
   </head>
   <body>
     <h1>Geowizard Recipes</h1>
+    <p>
+      My name is Tom Davies. <a href="https://www.youtube.com/@GeoWizard" 
+      target="_blank">Click here</a> to see my Youtube channel Geowizard.
+    </p>
     <ul>
       <li>
         <a href="./recipes/missions.html">Straight Line Missions</a>
+      </li>
+      <li>
+        <a href="./recipes/geodetective.html">Geodetective Videos</a>
+      </li>
+      <li>
+        <a href="./recipes/geoguessr.html">Classic Geoguessr Videos</a>
       </li>
     </ul>
   </body>
