Fill in content for all recipes

--- a/recipes/missions.html
+++ b/recipes/missions.html
@@ -39,7 +39,7 @@
                 a nice, quiet countryside walk.
             </li>
             <li>Update your viewers of your constant fear of the local farmers,
-                as they could kick you off their land (or worse) bringing an end
+                as they could kick you off their land bringing an end
                 to the mission.
             </li>
             <li>Proclaim that you have reached a low point of the mission, as
